--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.10.0",
     "firebase": "^11.7.3",
     "formik": "^2.4.6",
+    "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
     "lucide-react": "^0.510.0",
     "react": "^19.1.0",
